fix: use fake player for block swapper